# cadmium

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS.md  README.md  TODO  configure.sh  docs.loc  fagin  fagin.cabal  fagin.loc  log  profile.sh
R/: accessors.R  analysis_1.R  analysis_2.R  analysis_3.R  analysis_4.R  cache.R  class.R  class_print.R  class_summarize.R  classes.R  config.R  cosmetics_warnings.R  data.R  dataprep.R  derive.R  document_data.R  document_fagin.R  exploration.R  fagin.R  fagin.loc  fagin.rat  feature_overlaps.R  feature_table.R  filenaming.R  functions_alignments.R  functions_derive.R  functions_features.R  functions_loading.R  functions_overlaps.R  functions_synteny.R  gather.R  gene-pages.R  gff_handling.R  inputs.R  io.R  io_cache.R  io_load.R  main.R  nodes.R  origins.R  (+18 more)
R/old/: classification.R  loadData.R
benchmark/: Main.hs
data/: species.txt
doc/: notes.loc
etc/: config-template.yml  template-preconfig.sh
exec/: 1_prepare-inputs.sh  2a_get_transcript_orfs.sh  2b_get_genes.sh  2d_get_all_orfs.sh  configure.R  configure.sh  parse-gff.py
executable/: Main.hs
inst/delete_me/: README.md  verbose_report.Rmd
inst/etc/: config-template.yml  template-preconfig.sh
inst/extdata/: cds.yaml
inst/tiny/: test.fna  test.gff  unicorn-genelist.txt
inst/yeast/: control-list.txt  orphan-list.txt  phylostratr-species.Rds  phylostratr-strata.Rds  smalltree  tree  yeast
man/: alignToGenome.Rd  buildFeatureTable.Rd  build_derived_inputs.Rd  collate_translation_warnings.Rd  config-class.Rd  config.Rd  config_alignment-class.Rd  config_alignment_simulation-class.Rd  config_alignment_thresholds-class.Rd  config_input-class.Rd  config_synder-class.Rd  derive_aa.Rd  derive_genomic_ORFs.Rd  derive_nstring.Rd  derive_orffaa.Rd  derive_orfgff.Rd  derive_trans.Rd  derive_transcript_ORFs.Rd  derive_transorf.Rd  derive_transorffaa.Rd  derive_transorfgff.Rd  derived_input-class.Rd  determineLabels.Rd  determineOrigins.Rd  determine_labels.Rd  determine_origins.Rd  dna_summary-class.Rd  dnaregex.Rd  effector.Rd  extractWithComplements.Rd  faa_summary-class.Rd  fagin.Rd  fagin_cache.Rd  fagin_config-class.Rd  fagin_io.Rd  fagin_naming.Rd  fagin_printer.Rd  fagin_summary.Rd  feature_builders.Rd  final_protein_residue_counts.Rd  (+72 more)
morloc/: README.md
morloc/src/: docs.loc  types.loc
prof-log/: 1.prof  10.prof  11.prof  12.html  12.prof  13.html  13.prof  2.prof  3.prof  4.prof  5.prof  6.prof  7.prof  8.prof  9.prof
sample-data/: short
sand/human_de_novo/: COLUMN.tsv  parse-de-novo-human-files.R
src/: Fagin.hs  io.loc  prologue.loc
src/Fagin/: BioSeq.hs  ByteString  Error.hs  GeneModel.hs  Gff.hs  IO  Interval.hs  Prelude.hs  Report.hs  test.gff
src/morloc/: Makefile
src/prologue/: 1_prepare-inputs.sh  2_extract-fasta.sh  2a_get_transcript_orfs.sh  2b_get_genes.sh  2c_get_proteins.sh  2d_get_all_orfs.sh  3_gather-genome-summary-data.sh  4_get-search-intervals.sh  get-species-from-tree.R  (+2 more)
tests/: testthat.R
tmp-code/: GeneModel.hs  Genome.hs  Interval.hs  Sequence.hs
vignettes/: .gitignore  intro.Rmd  yeast.Rmd
(+56 files in other folders)
