name:     fagin
version:  0.8.0-dev
homepage: https://github.com/arendsee/fagin
synopsis: Classify orphan genes
description:

    Fagin does this and that

category:           Compiler
license:            GPL-3
license-file:       LICENSE
author:             Zebulun Arendsee 
maintainer:         arendsee@iastate.edu
extra-source-files: README.md TODO CONFIG
                    etc/*.yml
cabal-version:      >= 1.10
bug-reports:        https://github.com/arendsee/fagin/issues
build-type:         Simple

flag documentation
    default: False

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: Fagin,
                     Fagin.BioSeq
                     Fagin.GeneModel,
                     Fagin.Gff,
                     Fagin.Interval,
                     Fagin.Prelude,
                     Fagin.Report

    build-depends: base,
                   classy-prelude,
                   bytestring,
                   extra,
                   containers

    default-extensions: NoImplicitPrelude,
                        OverloadedStrings,
                        TypeSynonymInstances,
                        FlexibleInstances,
                        FlexibleContexts

    ghc-options: -Wall

    if flag(documentation)
        build-depends: hscolour

executable fagin
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: executable
    build-depends: base, fagin

    default-extensions: NoImplicitPrelude

    ghc-options: -Wall
